# kc-aeads

./: Cargo.toml  README.md
benches/: bench.rs
src/: cx.rs  cx_prf.rs  hkdf_com_prf.rs  hte_transform.rs  lib.rs  mac_hte_transform.rs  utc_transform.rs  util.rs
