[package]
name = "kc-aeads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
aes-gcm = "0.9"
sha2 = "0.10"
aead = "0.4"
cipher = "0.4"
zeroize = { version = "1", features = [ "derive" ] }

[dev-dependencies]
rand = { version = "0.8", features = [ "std", "std_rng" ] }
