[package]
name = "kc-aeads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
#aes-gcm = "0.10.0-pre"
aes-gcm = { path = "../AEADs/aes-gcm" }
sha2 = "0.10"
aead = { version = "0.4", default-features = false }
cipher = "0.4"
zeroize = { version = "1", features = [ "derive" ] }
rand_core = "0.6"
subtle = "2.4"

[dev-dependencies]
rand = { version = "0.8", features = [ "std", "std_rng" ] }
aead = { version = "0.4", features = [ "alloc", "rand_core" ] }
