[package]
name = "kc-aeads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
aes-gcm = { git = "https://github.com/rozbb/AEADs", branch = "clobbering-decrypt" }
aead = { version = "0.4", default-features = false }
blake2 = "0.10"
cipher = "0.4"
digest = { version = "0.10", features = [ "mac" ] }
rand_core = "0.6"
sha2 = "0.10"
subtle = "2.4"
zeroize = { version = "1", features = [ "derive" ] }

[dev-dependencies]
rand = { version = "0.8", features = [ "std", "std_rng" ] }
aead = { version = "0.4", features = [ "alloc", "rand_core" ] }
